# bloom

./: .gitignore  README.md  bts.jsonc  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  tsconfig.json  vite.config.ts
apps/sentio/: .gitignore  Dockerfile  main.py  pyproject.toml  qwen3_tts.py  voice_post.py
apps/sentio/docker/llama/: Dockerfile  start-llama.sh
apps/sentio/docker/tts/: Dockerfile
apps/sentio/notebooks/: text_to_speech.ipynb
apps/sentio/scripts/: docker-gpu-lease.sh  install-tts-remote.sh  quantize_higgs.sh  remote-benchmark.sh  start-tts.sh  tts_server.py
apps/server/: package.json  tsconfig.json  tsdown.config.ts
apps/server/src/: index.ts
apps/web/: Dockerfile  components.json  package.json  tsconfig.json  vite.config.ts
apps/web/src/: index.css  root.tsx
apps/web/src/components/: mode-toggle.tsx  sign-in-form.tsx  sign-up-form.tsx  user-menu.tsx
apps/web/src/lib/: auth-client.ts
apps/web/src/routes/: _index.tsx
apps/web/src/utils/: trpc.ts
